[package]
name = "ascii-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
clearscreen = "3.0.0"
colored = "2.1.0"
image = "0.24.9"
nokhwa = { path = "/home/mike/Software/nokhwa", version = "0.10.4", features = ["input-native"] }
