[package]
name = "ascii"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
clearscreen = "3.0.0"
colored = "2.1.0"
ffmpeg-next = "7.0.2"
image = "0.24.9"
nokhwa = { path = "../../Software/nokhwa", version = "0.10.4", features = ["input-native"] }
video-rs = "0.8.1"
